<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import
            alias="ExtensionUtil"
            type="hyunju.com.memo2020.util.ExtentionUtilKt" />

        <variable
            name="memo"
            type="hyunju.com.memo2020.db.Memo" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- image list view-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/img_rv"
                matchHeightToDeviceWidth="@{true}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <!-- text contents view -->
            <LinearLayout
                android:id="@+id/text_cl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_layout_margin"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_rv">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/title_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/title_hint"
                        android:text="@{memo.title}"
                        android:textSize="@dimen/tv_size_large" />

                    <EditText
                        android:id="@+id/date_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:hint="@string/edit_date_hint"
                        android:paddingLeft="@dimen/text_layout_margin"
                        android:text="@{ExtensionUtil.getDateText(memo)}"
                        android:textSize="@dimen/tv_size_small" />
                </LinearLayout>

                <EditText
                    android:id="@+id/contents_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_layout_margin"
                    android:layout_marginTop="@dimen/text_layout_margin_large"
                    android:background="@null"
                    android:hint="@string/contents_hint"
                    android:paddingBottom="@dimen/contents_et_bottom_padding"
                    android:text="@{memo.contents}"
                    android:textSize="@dimen/tv_size" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>